charts/connector/discovery/templates/ingress.yaml
# Copyright (c) 2021,2022,2023
#       2022: ZF Friedrichshafen AG
#       2022: ISTOS GmbH
#       2022,2023: Bayerische Motoren Werke Aktiengesellschaft (BMW AG)
#       2022,2023: BOSCH AG
# Copyright (c) 2021,2022,2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License, Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0. *
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations
# under the License.
#
# SPDX-License-Identifier: Apache-2.0
#
---
{ { - if .Values.ingress.enabled - } }
  { { - $fullName := include "discovery.fullname" . - } }
  { { - $svcPort := .Values.service.port - } }
  { { - if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) } }
  { { - if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") } }
  { { - $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className } }
  { { - end } }
  { { - end } }
  { { - if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion - } }
apiVersion: networking.k8s.io/v1
  { { - else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion - } }
apiVersion: networking.k8s.io/v1beta1
  { { - else - } }
apiVersion: extensions/v1beta1
  { { - end } }
kind: Ingress
metadata:
  name: { { $fullName } }
  labels:
    { { - include "discovery.labels" . | nindent 4 } }
  { { - with .Values.ingress.annotations } }
  annotations:
    { { - toYaml . | nindent 4 } }
  { { - end } }
spec:
  { { - if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) } }
  ingressClassName: { { .Values.ingress.className } }
  { { - end } }
  { { - if .Values.ingress.tls } }
  tls:
    { { - range .Values.ingress.tls } }
    - hosts:
        { { - range .hosts } }
        - { { . | quote } }
        { { - end } }
      secretName: { { .secretName } }
    { { - end } }
  { { - end } }
  rules:
    { { - range .Values.ingress.hosts } }
    - host: { { .host | quote } }
      http:
        paths:
          { { - range .paths } }
          - path: { { .path } }
            { { - if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) } }
            pathType: { { .pathType } }
            { { - end } }
            backend:
              { { - if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion } }
              service:
                name: { { $fullName } }
                port:
                  number: { { $svcPort } }
              { { - else } }
              serviceName: { { $fullName } }
              servicePort: { { $svcPort } }
              { { - end } }
          { { - end } }
    { { - end } }
  { { - end } }
